# veritas

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: demo.tape
crates/veritas-audit/: Cargo.toml
crates/veritas-audit/src/: chain.rs  event.rs  lib.rs  memory.rs
crates/veritas-contracts/: Cargo.toml
crates/veritas-contracts/src/: agent.rs  capability.rs  error.rs  execution.rs  lib.rs  policy.rs  verify.rs
crates/veritas-core/: Cargo.toml
crates/veritas-core/src/: executor.rs  lib.rs  traits.rs
crates/veritas-policy/: Cargo.toml
crates/veritas-policy/policies/: healthcare.toml
crates/veritas-policy/src/: engine.rs  lib.rs  rule.rs
crates/veritas-ref-healthcare/: Cargo.toml
crates/veritas-ref-healthcare/policies/: healthcare.toml  pipeline.toml  prior_auth.toml
crates/veritas-ref-healthcare/src/: lib.rs  mock_data.rs
crates/veritas-ref-healthcare/src/scenarios/: clinical_pipeline.rs  drug_interaction.rs  mod.rs  note_summarizer.rs  patient_query.rs  prior_auth.rs
crates/veritas-verify/: Cargo.toml
crates/veritas-verify/src/: engine.rs  lib.rs
demo/: Cargo.toml
demo/src/: main.rs
docs/: README.md
docs/whitepaper/: WHITEPAPER.en.md  WHITEPAPER.fr.md  WHITEPAPER.ja.md  WHITEPAPER.zh.md
docs/yellowpaper/: YELLOWPAPER.en.md
tui/: Cargo.toml
tui/src/: main.rs
