[workspace]
resolver = "2"
members = [
    "crates/veritas-contracts",
    "crates/veritas-core",
    "crates/veritas-policy",
    "crates/veritas-audit",
    "crates/veritas-verify",
    "crates/veritas-ref-healthcare",
    "demo",
    "tui",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
veritas-contracts = { path = "crates/veritas-contracts" }
veritas-core = { path = "crates/veritas-core" }
veritas-policy = { path = "crates/veritas-policy" }
veritas-audit = { path = "crates/veritas-audit" }
veritas-verify = { path = "crates/veritas-verify" }
veritas-ref-healthcare = { path = "crates/veritas-ref-healthcare" }
jsonschema = "0.28"
