[package]
name = "demo"
version = "0.1.0"
edition = "2021"
description = "VERITAS healthcare reference runtime demo CLI"

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
veritas-contracts.workspace = true
veritas-audit.workspace = true
veritas-ref-healthcare.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
