[package]
name = "veritas-tui"
version = "0.1.0"
edition = "2021"
description = "VERITAS Healthcare Demo — interactive Ratatui TUI"

[[bin]]
name = "veritas-tui"
path = "src/main.rs"

[dependencies]
veritas-contracts.workspace = true
veritas-core.workspace = true
veritas-policy.workspace = true
veritas-audit.workspace = true
veritas-verify.workspace = true
veritas-ref-healthcare.workspace = true
ratatui = "0.29"
crossterm = "0.28"
serde_json.workspace = true
chrono.workspace = true
